[gd_scene load_steps=18 format=3 uid="uid://cgbepm64mxp57"]

[ext_resource type="Script" path="res://resources/treballador/treballador.gd" id="1_yrqwm"]
[ext_resource type="Texture2D" uid="uid://clkoj1mihtni" path="res://resources/treballador/imatges_treballadors/Character 1.png" id="2_sjpv1"]
[ext_resource type="Texture2D" uid="uid://b27w2mpqxbsub" path="res://resources/pixel_style3.png" id="3_ux43y"]
[ext_resource type="Texture2D" uid="uid://cu25idy7sdyjq" path="res://resources/palette.svg" id="4_77350"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_otts6"]
radius = 19.0
height = 50.0

[sub_resource type="Curve" id="Curve_2oehg"]
max_value = 200.0
_data = [Vector2(0, 65.9341), 0.0, 0.0, 0, 0, Vector2(0.986667, 200), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qiir1"]
curve = SubResource("Curve_2oehg")

[sub_resource type="Curve" id="Curve_o1rg3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.986667, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_0j22b"]
curve = SubResource("Curve_o1rg3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ka4ix"]
particle_flag_disable_z = true
direction = Vector3(0, -10, 0)
spread = 18.707
initial_velocity_min = 166.67
initial_velocity_max = 166.67
gravity = Vector3(0, 0, 0)
scale_min = 0.07
scale_max = 0.1
scale_curve = SubResource("CurveTexture_0j22b")
scale_over_velocity_min = 3.0
scale_over_velocity_max = 4.0
anim_speed_min = 5.0
anim_speed_max = 20.0
anim_speed_curve = SubResource("CurveTexture_qiir1")

[sub_resource type="Animation" id="Animation_ne7m8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-27, -16)]
}

[sub_resource type="Animation" id="Animation_47ug6"]
resource_name = "idle"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.866667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_rr782"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}

[sub_resource type="Animation" id="Animation_g7cfe"]
resource_name = "work"
length = 1.4
loop_mode = 1
step = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(0, 6), Vector2i(0, 10), Vector2i(1, 10), Vector2i(2, 10), Vector2i(3, 10), Vector2i(4, 10), Vector2i(5, 10), Vector2i(6, 10)]
}

[sub_resource type="Animation" id="Animation_5mjeb"]
resource_name = "celebra"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.333333, 0.466667, 0.466767, 0.466867, 0.533333, 0.6, 0.666667, 0.7, 0.866667, 1),
"transitions": PackedFloat32Array(2.14355, 3.13834, 3.13834, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-27, -16), Vector2(-28, -52), Vector2(-27, -16), Vector2(-28, -52), Vector2(-28, -34), Vector2(-28, -43), Vector2(-27, -16), Vector2(-27, -16), Vector2(-27, -30), Vector2(-27, -16), Vector2(-28, -52), Vector2(-27, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u5se3"]
_data = {
"RESET": SubResource("Animation_ne7m8"),
"celebra": SubResource("Animation_5mjeb"),
"idle": SubResource("Animation_47ug6"),
"walk": SubResource("Animation_rr782"),
"work": SubResource("Animation_g7cfe")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0l81y"]
bg_color = Color(0.190085, 0.576399, 1.92523e-07, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Treballador" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_yrqwm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(35, 59)
shape = SubResource("CapsuleShape2D_otts6")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(-27, -16)
scale = Vector2(2, 2)
texture = ExtResource("2_sjpv1")
centered = false
hframes = 12
vframes = 22

[node name="Emocions" type="Sprite2D" parent="Sprite2D"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(29.5, 13)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("3_ux43y")
hframes = 5
vframes = 6
frame = 1
region_rect = Rect2(0, 0, 16, 16)

[node name="ParticulesTreball" type="GPUParticles2D" parent="Sprite2D"]
unique_name_in_owner = true
position = Vector2(31.5, 21)
emitting = false
amount = 4
amount_ratio = 0.5
process_material = SubResource("ParticleProcessMaterial_ka4ix")
texture = ExtResource("4_77350")
explosiveness = 0.41
randomness = 0.4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_u5se3")
}

[node name="Raycasts" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(48, 93)

[node name="RayCast2D" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(39, 60)

[node name="RayCast2D2" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-36, 57)

[node name="tasca" type="Timer" parent="."]

[node name="avorriment" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_top = -17.0
offset_right = 38.0
offset_bottom = 23.0

[node name="progressEnergia" type="ProgressBar" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 2.002
anchor_bottom = 3.104
offset_left = -8.0
offset_top = 83.0
offset_right = -14.08
offset_bottom = -16.16
grow_horizontal = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_0l81y")
show_percentage = false

[node name="printEstat" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_right = 94.0
offset_bottom = 23.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
